--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li> --}}
             <li class="nav-item active">
-                <a class="nav-link" href="/sigin">Iniciar Sesion</a>
+                <a class="nav-link" href="/sigin">Iniciar Sesión</a>
             </li>
         </ul>
     </div>
