--- a/src/views/customers/add.hbs
+++ b/src/views/customers/add.hbs
@@ -1,8 +1,17 @@
 <div class="row">
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-header">Nuevo Cliente <i class="fas fa-user"></i> </div>
-            <div class="card-body"></div>
+    <div class="col-md-6 offset-md-3">
+        <div class="card mt-5">
+            <div class="card-header"><h3>Ingresar Nuevo Cliente</h3></div>
+            <div class="card-body">
+                <form action="/customers/add" method="POST">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="name" placeholder="Nombre" autofocus required>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success">Guardar</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <div class="col-md-6"></div>
