--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -10,6 +10,12 @@
                 <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li> --}}
             <li class="nav-item active">
+                <a class="nav-link" href="/customers/add">Registro</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/customers">Clientes</a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="/sigin">Iniciar Sesion</a>
             </li>
         </ul>
