--- a/src/views/customers/list.hbs
+++ b/src/views/customers/list.hbs
@@ -27,7 +27,7 @@
                                             Ver
                                         </a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="btn btn-warning btn-block p-3" href="#">
+                                        <a class="btn btn-warning btn-block p-3" href="/customers/edit/{{id}}">
                                             <i class="fas fa-edit"></i>
                                             Editar
                                         </a>
